--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,7 @@ Inventarization.Android.Client/local.properties
 Inventarization.Api/.vs/Inventory/v14/.suo
 Inventarization.Android.Client/*.iml
 Inventarization.Android.Client/app/app.iml
+Inventarization.Android.Client/app/app.iml
+Inventarization.Android.Client/Inventarization.Android.Client.iml
+Inventarization.Android.Client/local.properties
+Inventarization.Api/.vs/Inventory/v14/.suo
