--- a/Inventarization.Api/Inventorisation/Inventorization.Api.csproj
+++ b/Inventarization.Api/Inventorisation/Inventorization.Api.csproj
@@ -239,6 +239,9 @@
     <Compile Include="Controllers\ActionController.cs" />
     <Compile Include="Controllers\TaskController.cs" />
     <Compile Include="Controllers\ZonesController.cs" />
+    <Compile Include="Extensions\Extensions.cs" />
+    <Compile Include="Extensions\Helpers.cs" />
+    <Compile Include="Formatters\CSVMediaTypeFormatter.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
