--- a/Inventarization.Api/Inventorization.Business/Inventorization.Business.csproj
+++ b/Inventarization.Api/Inventorization.Business/Inventorization.Business.csproj
@@ -48,9 +48,11 @@
     <Compile Include="Model\ActionType.cs" />
     <Compile Include="Model\Company.cs" />
     <Compile Include="Model\Inventorization.cs" />
+    <Compile Include="Model\Item.cs" />
     <Compile Include="Model\Task.cs" />
     <Compile Include="Model\User.cs" />
     <Compile Include="Model\UserLevel.cs" />
+    <Compile Include="Model\ZoneState.cs" />
     <Compile Include="Model\Zone.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
