--- a/Inventarization.Android.Client/app/src/main/AndroidManifest.xml
+++ b/Inventarization.Android.Client/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
+            android:windowSoftInputMode="stateAlwaysHidden"
             android:name="inventorization.ZoneSelectActivity"
             android:label="@string/title_activity_zone_select">
             <intent-filter>
@@ -29,6 +30,7 @@
             </intent-filter>
         </activity>
         <activity
+            android:windowSoftInputMode="stateAlwaysHidden"
             android:name=".ActionActivity"
             android:label="@string/title_activity_main">
             <intent-filter>
