--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ Inventarization.Android.Client/app/app.iml
 Inventarization.Android.Client/Inventarization.Android.Client.iml
 Inventarization.Android.Client/local.properties
 Inventarization.Api/.vs/Inventory/v14/.suo
+Inventarization.Api/.vs/Inventory/v14/.suo
