--- a/Inventarization.Admin/package.json
+++ b/Inventarization.Admin/package.json
@@ -4,8 +4,9 @@
   "description": "инвентанизация предприятия",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config webpack.config.js --progress --inline --colors",
-    "build": "webpack --config webpack.production.config.js --progress --colors"
+    "start": "webpack-dev-server --debug --hot --devtool eval-source-map --output-pathinfo --watch --colors --inline --content-base public --port 8050 --host 0.0.0.0",
+    "build": "webpack --config webpack.production.config.js --progress --colors",
+    "nodemon": "set NODE_PATH=./src/app; && nodemon server.js"
   },
   "keywords": [
     "inventory"
@@ -18,13 +19,16 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "html-webpack-plugin": "^2.28.0",
+    "nodemon": "^1.11.0",
     "react-hot-loader": "^1.3.1",
     "transfer-webpack-plugin": "^0.1.4",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
   },
   "dependencies": {
+    "babel-polyfill": "^6.23.0",
     "es6-promise": "^4.1.0",
+    "express": "^4.15.2",
     "isomorphic-fetch": "^2.2.1",
     "material-ui": "^0.17.0",
     "moment": "^2.18.1",
@@ -35,7 +39,8 @@
     "react-dom": "^15.4.2",
     "react-moment": "^0.2.2",
     "react-redux": "^5.0.3",
-    "react-router-dom": "^4.0.0",
+    "react-redux-toastr": "^5.0.0",
+    "react-router": "^3.0.3",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.1",
