--- a/Inventarization.Admin/package.json
+++ b/Inventarization.Admin/package.json
@@ -1,7 +1,7 @@
 {
   "name": "inventory",
   "version": "1.0.0",
-  "description": "инвентанизация предприятия",
+  "description": "инвентаризация предприятия",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --debug --hot --devtool eval-source-map --output-pathinfo --watch --colors --inline --content-base public --port 8050 --host 0.0.0.0",
@@ -16,7 +16,7 @@
   "devDependencies": {
     "babel-core": "^6.23.1",
     "babel-loader": "^6.4.0",
-    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.23.0",
     "html-webpack-plugin": "^2.28.0",
     "nodemon": "^1.11.0",
