--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ Inventarization.Android.Client/Inventarization.Android.Client.iml
 Inventarization.Android.Client/local.properties
 Inventarization.Api/.vs/Inventory/v14/.suo
 Inventarization.Api/.vs/Inventory/v14/.suo
+Inventarization.Api/.idea/**
