--- a/Inventarization.Admin/package.json
+++ b/Inventarization.Admin/package.json
@@ -35,12 +35,14 @@
     "moment-timezone": "^0.5.11",
     "preact": "^7.2.0",
     "preact-tap-event-plugin": "^0.1.2",
+    "prop-types": "^15.5.8",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-moment": "^0.2.2",
     "react-redux": "^5.0.3",
     "react-redux-toastr": "^5.0.0",
     "react-router": "^3.0.3",
+    "react-router-redux": "^4.0.8",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.1",
