--- a/Inventarization.Api/Inventorisation/Web.config
+++ b/Inventarization.Api/Inventorisation/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Server=81.177.141.135;Port=5432;User Id=oleg-baranow_invent;Password=anatole123;Database=oleg-baranow_invent" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Server=193.124.113.47;Port=5432;User Id=postgres;Password=anatole123;Database=postgres" providerName="System.Data.SqlClient" />
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Inventorization-20170320093253.mdf;Initial Catalog=aspnet-Inventorization-20170320093253;Integrated Security=True" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings></appSettings>
