--- a/Inventarization.Admin/package.json
+++ b/Inventarization.Admin/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --debug --hot --devtool eval-source-map --output-pathinfo --watch --colors --inline --content-base public --port 8050 --host 0.0.0.0",
-    "build": "webpack --config webpack.production.config.js --progress --colors",
-    "nodemon": "set NODE_PATH=./src/app; && nodemon server.js"
+    "build": "set NODE_ENV=production && webpack --config webpack.production.config.js --progress --colors",
+    "nodemon": "set PORT=90 && nodemon --exec npm run babel-node -- src/app/server.js",
+    "babel-node": "babel-node --presets=es2015 src/app/server.js"
   },
   "keywords": [
     "inventory"
@@ -14,8 +15,10 @@
   "author": "Baranov Oleg",
   "license": "ISC",
   "devDependencies": {
+    "babel-cli": "^6.24.1",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.4.0",
+    "babel-preset-env": "^1.4.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.23.0",
     "html-webpack-plugin": "^2.28.0",
