--- a/Inventarization.Android.Client/app/build.gradle
+++ b/Inventarization.Android.Client/app/build.gradle
@@ -5,8 +5,8 @@ android {
     buildToolsVersion "25.0.2"
 
     defaultConfig {
-        applicationId "com.example.scan"
-        minSdkVersion 9
+        applicationId "inventory.aeco"
+        minSdkVersion 18
         targetSdkVersion 15
     }
 
