--- a/Inventarization.Admin/package.json
+++ b/Inventarization.Admin/package.json
@@ -33,12 +33,13 @@
     "es6-promise": "^4.1.0",
     "express": "^4.15.2",
     "isomorphic-fetch": "^2.2.1",
+    "lodash": "^4.17.4",
     "material-ui": "^0.17.0",
     "moment": "^2.18.1",
     "moment-timezone": "^0.5.11",
     "preact": "^7.2.0",
     "preact-tap-event-plugin": "^0.1.2",
-    "prop-types": "^15.5.8",
+    "prop-types": "^15.5.9",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-moment": "^0.2.2",
@@ -48,7 +49,9 @@
     "react-router-redux": "^4.0.8",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
+    "redux-infinite-scroll": "^1.0.9",
     "redux-logger": "^3.0.1",
+    "redux-throttle": "^0.1.1",
     "redux-thunk": "^2.2.0"
   }
 }
