--- a/Inventarization.Admin/.vscode/launch.json
+++ b/Inventarization.Admin/.vscode/launch.json
@@ -9,14 +9,11 @@
             "request": "launch",
             "name": "Launch Program",
             "program": "${workspaceRoot}\\server.js",
-            "env": { "PORT": "90" }
-        },
-        {
-            "type": "node",
-            "request": "attach",
-            "name": "Attach to Port",
-            "address": "localhost",
-            "port": 5858
+            "env": { 
+                "PORT": "90",
+                "API_URL": "http://localhost/api/",
+                "ASSETS_URL": "http://localhost:8050/public/" 
+            }
         }
     ]
 }
