--- a/Inventarization.Api/Inventorisation/Inventorization.Api.csproj
+++ b/Inventarization.Api/Inventorisation/Inventorization.Api.csproj
@@ -249,6 +249,7 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CloseZoneVM.cs" />
     <Compile Include="Models\CreateItemViewModel.cs" />
+    <Compile Include="Models\ImportItemsErrorVM.cs" />
     <Compile Include="Models\Item.cs" />
     <Compile Include="Models\Action.cs" />
     <Compile Include="Models\IdentityModels.cs" />
