--- a/Inventarization.Admin/package.json
+++ b/Inventarization.Admin/package.json
@@ -28,17 +28,21 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
+    "cookie-parser": "^1.4.3",
     "es6-promise": "^4.1.0",
     "express": "^4.15.2",
     "isomorphic-fetch": "^2.2.1",
+    "js-cookie": "^2.1.4",
     "lodash": "^4.17.4",
     "material-ui": "^0.17.0",
     "moment": "^2.18.1",
     "moment-timezone": "^0.5.11",
+    "node-localstorage": "^1.3.0",
     "preact": "^7.2.0",
     "preact-tap-event-plugin": "^0.1.2",
     "prop-types": "^15.5.9",
     "react": "^15.4.2",
+    "react-cookie": "^2.0.7",
     "react-dom": "^15.4.2",
     "react-dropzone": "^3.13.1",
     "react-file-input": "^0.2.5",
@@ -49,9 +53,11 @@
     "react-router-redux": "^4.0.8",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
+    "redux-cookies": "^1.0.1",
     "redux-infinite-scroll": "^1.0.9",
     "redux-logger": "^3.0.1",
     "redux-throttle": "^0.1.1",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "universal-cookie-express": "^2.0.5"
   }
 }
