--- a/Inventarization.Android.Client/app/build.gradle
+++ b/Inventarization.Android.Client/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.fasterxml.jackson.datatype:jackson-datatype-json-org:2.9.0.pr2'
     compile 'eu.the4thfloor.volley:com.android.volley:2015.05.28'
+    testCompile 'junit:junit:4.12'
 }
