--- a/Inventarization.Android.Client/app/src/main/AndroidManifest.xml
+++ b/Inventarization.Android.Client/app/src/main/AndroidManifest.xml
@@ -15,27 +15,39 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name="inventory.aeco.ZoneSelectActivity"
+            android:name=".aeco.ZoneSelectActivity"
             android:label="@string/title_activity_zone_select">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
         <activity
-            android:name="inventory.aeco.ActionActivity"
+            android:name=".aeco.ActionActivity"
             android:label="@string/title_activity_main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
         <activity
-            android:name="inventory.aeco.WorkflowSelection"
+            android:name=".aeco.WorkflowSelection"
             android:label="@string/title_activity_workflow_selection">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".aeco.LoginActivity"
+            android:label="@string/title_activity_login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
