--- a/Inventarization.Api/Inventorization.Business/Inventorization.Business.csproj
+++ b/Inventarization.Api/Inventorization.Business/Inventorization.Business.csproj
@@ -52,6 +52,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Domains\ActionDomain.cs" />
+    <Compile Include="Domains\InventorizationDomain.cs" />
+    <Compile Include="Domains\ZoneDomain.cs" />
+    <Compile Include="Exceptions\ZoneAccessException.cs" />
+    <Compile Include="Interfaces\IActionRepository.cs" />
+    <Compile Include="Interfaces\ICompanyRepository.cs" />
+    <Compile Include="Interfaces\IInventorizationRepository.cs" />
+    <Compile Include="Interfaces\IZoneRepository.cs" />
     <Compile Include="Model\Action.cs" />
     <Compile Include="Model\ActionType.cs" />
     <Compile Include="Model\Company.cs" />
