--- a/Inventarization.Admin/package.json
+++ b/Inventarization.Admin/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --debug --hot --devtool eval-source-map --output-pathinfo --watch --colors --inline --content-base public --port 8050 --host 0.0.0.0",
-    "build": "set NODE_ENV=production && webpack --config webpack.production.config.js --progress --colors"
+    "build": "set NODE_ENV=production && webpack --config webpack.production.config.js --progress --colors",
+    "test": "jest",
+    "test:watch": "npm test -- --watch"
   },
   "keywords": [
     "inventory"
@@ -15,13 +17,17 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.23.1",
+    "babel-jest": "^20.0.3",
     "babel-loader": "^6.4.0",
     "babel-preset-env": "^1.4.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.23.0",
     "html-webpack-plugin": "^2.28.0",
+    "jest": "^20.0.4",
+    "nock": "^9.0.13",
     "nodemon": "^1.11.0",
     "react-hot-loader": "^1.3.1",
+    "redux-mock-store": "^1.2.3",
     "transfer-webpack-plugin": "^0.1.4",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
