--- a/Inventarization.Admin/.vscode/launch.json
+++ b/Inventarization.Admin/.vscode/launch.json
@@ -14,6 +14,13 @@
                 "API_URL": "http://localhost/api/",
                 "ASSETS_URL": "http://localhost:8050/public/" 
             }
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Start tests",
+            "program": "${workspaceRoot}\\node_modules\\jest\\bin\\jest.js",
+            "cwd": "${workspaceRoot}"
         }
     ]
 }
