--- a/Inventarization.Admin/package.json
+++ b/Inventarization.Admin/package.json
@@ -12,6 +12,11 @@
   "keywords": [
     "inventory"
   ],
+  "jest": {
+    "globals": {
+      "API_URL": "http://localhost/api/"
+    }
+  },
   "author": "Baranov Oleg",
   "license": "ISC",
   "devDependencies": {
