--- a/Inventarization.Api/Inventorisation/Web.config
+++ b/Inventarization.Api/Inventorisation/Web.config
@@ -28,6 +28,12 @@
     <customErrors mode="Off" />
   </system.web>
   <system.webServer>
+    <httpProtocol>
+      <customHeaders>
+        <remove name="Vary"></remove>
+        <add name="Vary" value="Origin"></add>
+      </customHeaders>
+    </httpProtocol>
     <modules>
       <remove name="FormsAuthentication" />
     </modules>
