new zone status scheme

--- a/Inventarization.Api/Inventorization.Business/Inventorization.Business.csproj
+++ b/Inventarization.Api/Inventorization.Business/Inventorization.Business.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Interfaces\IActionRepository.cs" />
     <Compile Include="Interfaces\ICompanyRepository.cs" />
     <Compile Include="Interfaces\IInventorizationRepository.cs" />
+    <Compile Include="Interfaces\IUsageRepository.cs" />
     <Compile Include="Interfaces\IZoneRepository.cs" />
     <Compile Include="Model\Action.cs" />
     <Compile Include="Model\ActionType.cs" />
