--- a/Inventarization.Api/Inventorisation/Inventorization.Api.csproj
+++ b/Inventarization.Api/Inventorisation/Inventorization.Api.csproj
@@ -242,6 +242,7 @@
     <Compile Include="Controllers\ActionController.cs" />
     <Compile Include="Controllers\ReportController.cs" />
     <Compile Include="Controllers\TaskController.cs" />
+    <Compile Include="Controllers\UsageController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Controllers\ZonesController.cs" />
     <Compile Include="MyAuthExtensions.cs" />
@@ -260,6 +261,7 @@
     <Compile Include="ViewModels\Item.cs" />
     <Compile Include="ViewModels\Action.cs" />
     <Compile Include="ViewModels\LoginModel.cs" />
+    <Compile Include="ViewModels\OpenZoneViewModel.cs" />
     <Compile Include="ViewModels\SetQuantityVM.cs" />
     <Compile Include="ViewModels\UserInfo.cs" />
     <Compile Include="ViewModels\Zone.cs" />
