--- a/Inventarization.Api/Inventorisation/Web.config
+++ b/Inventarization.Api/Inventorisation/Web.config
@@ -12,7 +12,9 @@
     <add name="DefaultConnection" connectionString="Server=193.124.113.47;Port=5432;User Id=postgres;Password=anatole123;Database=postgres" providerName="System.Data.SqlClient" />
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Inventorization-20170320093253.mdf;Initial Catalog=aspnet-Inventorization-20170320093253;Integrated Security=True" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
-  <appSettings />
+  <appSettings>
+    <add key="UndefinedItemAllowed" value="false"/>
+  </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
