--- a/Inventarization.Api/Inventorisation/NLog.config
+++ b/Inventarization.Api/Inventorisation/NLog.config
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-      xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd"
       autoReload="true"
       throwExceptions="false"
       internalLogLevel="Off" internalLogFile="c:\temp\nlog-internal.log">
-
+  <variable name="basedir" value="c:/logs/invent"/>
   <!-- optional, add some variables
   https://github.com/nlog/NLog/wiki/Configuration-file#variables
   -->
   <targets>
 
-    <target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
+    <target xsi:type="File" name="file" fileName="${basedir}/${shortdate}.log"
             layout="${longdate} ${uppercase:${level}} ${message}" />
   </targets>
 
   <rules>
-    <logger name="*" minlevel="Debug" writeTo="f" />
+    <logger name="*" minlevel="Debug" writeTo="file" />
   </rules>
 </nlog>
